# Game-Jam-OneP-2024

./: CMakeLists.txt  LICENSE  Object.cpp  Object.h  ObjectManager.h  README.md  Tileset.h  globals.h  main.cpp
Room/: Layer.cpp  Layer.h  Room.cpp  Room.h  TileLayer.cpp  TileLayer.h
levels/: editor_project.ogmo  level1.json  level1N.json  level2.json  level2N.json  level3.json  level3N.json  level4.json  level4N.json
object_classes/: Chouette.cpp  Chouette.h
sprites/: level1.json
src/: GameOver.cpp  GameOver.h  MusicManager.cpp  MusicManager.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  State.cpp  State.h  StateManager.cpp  StateManager.h  Tileset.cpp  Tileset.h  globals.h  main.cpp
src/Room/: Layer.cpp  Layer.h  ObjectLayer.cpp  ObjectLayer.h  Room.cpp  Room.h  TileLayer.cpp  TileLayer.h
src/object_classes/: Bell.cpp  Bell.h  Button.cpp  Button.h  Chouette.cpp  Chouette.h  Door.cpp  Door.h  Fox.cpp  Fox.h  ObjectType.h  RoomTrigger.cpp  RoomTrigger.h  SleepingChouette.cpp  SleepingChouette.h
